[package]
name = "yyx-cbg"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yyx-utils = { path = "../yyx-utils" }
yyx-types = { path = "../yyx-types" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
failure_derive = "0.1"
reqwest = "0.9"
url = "2.1.0"
lazy_static = "1.0"