[package]
name = "yyx-data"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
yyx-utils = { path = "../yyx-utils" }
yyx-types = { path = "../yyx-types" }
log = "0.4"
failure = "0.1"
failure_derive = "0.1"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
libsqlite3-sys = { version = ">=0.8.0, <0.13.0", features = ["bundled"] }
diesel = { version = "1.4.0", features = ["sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
diesel_migrations = "1.4.0"