[package]
name = "yyx-types"
version = "0.1.1"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
yyx-utils = { path = "../yyx-utils" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
failure_derive = "0.1"